--- a/LoginUserData.html
+++ b/LoginUserData.html
@@ -2,6 +2,6 @@
 <html>
 <title>Thông tin user</title>
 <body>
-<iframe src="http://vanhieund1998.webpg.top/xulyloc.php" width="100%" height="500px"  style="border: none ;"></iframe>
+<iframe src="http://vanhieund1998.webpg.top/loc.html" width="100%" height="500px"  style="border: none ;"></iframe>
 </body>
 </html>
